# cow_id_ocr

./: .gitignore  CMakeLists.txt  README.MD  ab.sh  build_version.h.in  corner1.yaml  cow_id.cpp  cow_id.hpp  display_roi.h  sample.cpp  setDisplay.cpp  test.cpp
JNI/: CMakeLists.txt  com_zzas_openapplication_sdk_run.cpp  com_zzas_openapplication_sdk_run.h
NET/: net.cpp  net.hpp
OCR/: cow_id.cpp  cow_id.hpp
ROI/: display_roi.h
SDK/: cow_sdk.cpp  cow_sdk.hpp
UVC/: capture.c  capture.cpp  capture.h  capture.hpp  mjpg2mat.cpp
log/: log.h
net/: net.cpp  net.hpp
sample/: demo.cpp  mjpg2mat.cpp  sample.cpp  setDisplay.cpp
trash/: corner.yaml  rec_num.h
win/: CMakeLists.txt  captureImage.cpp  recognizeID.cpp  recognizeVideo.cpp  setDisplay.cpp  video2image.cpp
